# Individual-studies

./: README.md  benchmark_analysis.py  benchmark_gen_time.py  benchmark_model.py  benchmark_plot_report.py  benchmark_utils.py  benchmark_zh_percentage.py  clts_benchmark.py  cnewsum_benchmark.py  constants.py  convert_model.sh  crawl_news.py  curriculum_main.py  custom_model_create.py  custom_model_curriculum.py  custom_model_pretrain.py  generate_rationale.ipynb  generated_news_with_rationales_qwen2.5_32b-instruct-q6_K_old.jsonl  local_data_format.py  local_data_format_summary.py  local_data_format_v3.py  local_data_generate.py  local_data_generate_better.py  local_data_generate_v3.ipynb  local_data_generate_v3.py  merge_gen_NWR_32b.py  model_benchmark.py  news_with_rationale.py  parse_generated_data.py  parse_response.py  pyproject.toml  rationale.py  requirement.txt  requirements.txt  reset_local_data.py  run.sh  split_train_eval_data.py  summarized_news.py  testing_model.py  training.py  (+4 more)
Knowledge-Based Systems journal/: Lightweight Chinese News Summarization via Knowledge Distillation and Curriculum Learning.tex
benchmark_result/Qwen2.5-0.5B-Instruct-cl_24233news_1stg_v3-lr_adj-only_attn/: judged_by_Qwen_Qwen2.5-32B-Instruct.json
benchmark_result/Qwen2.5-0.5B-Instruct-cl_24233news_1stg_v3-lr_adj-only_mlp/: judged_by_Qwen_Qwen2.5-32B-Instruct.json
crawler/: crawler_base.py  exceptions.py  main.py  udn_crawler.py  utils.py
curriculum_training/: constants.py  curriculum_learning.py  curriculum_training.py  curriculum_utils.py  gen_CHT_response.py  gen_zh_tw_response.py  gen_zh_tw_response_vllm.py  generated_responses.jsonl  utils.py
stored_data/: news_with_rationales.jsonl
thesis/: .latexmkrc  main.tex
(+40 files in other folders)
