[project]
name = "My_individual_study"
authors = [
    {name = "Benny Wang", email = "bennywang1007@gmail.com"},
]
version = "1.0.0"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "accelerate>=0.26.0",
    "beautifulsoup4>=4.13.3",
    "datasets>=3.5.0",
    "numpy>=2.2.4",
    "ollama>=0.4.7",
    "opencc>=1.1.9",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "tensorboard>=2.19.0",
    "tldextract>=5.2.0",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.2",
]
readme = "README.md"
description = "My_individual_study is a project that focuses on LLM fine-tuning specifically on the Chinese news summarization task."
