[project]
name = "My_individual_study"
authors = [
    {name = "Benny Wang", email = "bennywang1007@gmail.com"},
]
version = "1.0.0"
license = "MIT"
requires-python = ">=3.12"

dependencies = {file = ["requirements.txt"]}
readme = "README.md"
description = "My_individual_study is a project that focuses on LLM fine-tuning specifically on the Chinese news summarization task."


[tool.uv.sources]
torch = [
  { index = "pytorch-cu124" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
